--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,273 @@
 @import url(/css/variables.css);
+/* 
+body{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 27px;
+    color: var( --text-color);
+} */
+/* Заголовки червоним кольором */
+.mainTitle     {
+    font-family: 'Open-sans';
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 49px;         
+    color: var(--primary-color);
+}
+/* Заголовки над типу "Who we are"  */
+.secondaryTitle{
+    font-family: 'Open-sans';
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 49px;    
+    text-transform: uppercase;        
+    color: var(--secondary-color);
+}
+ /* Заголовки маленьких абзаців з картинками */
+.lowerTitle{
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 29px;
+    color: var( --text-color);
+}
+/* Заголовки над нижніми абзацами */
+.otherTitle{
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2 7px;
+    line-height: 37px;
+    color: var(--secondary-color);
+}            
+/* Осоновний текст */
+.mainText{
+    font-family: 'Open-sans';
+    font-style: normal; 
+    font-weight: 400;
+    font-size: 21px;
+     line-height: 29px;
+    color: var( --text-color);
+}
+/* Інколи використовується білий текст */
+.whiteText{
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 21px;
+    line-height: 29px;
+    text-align: center;
+    color: var( --white-text-color);   
+}
+/* Другорядний текст */
+.secondaryText{
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    color: var( --text-color);
+}
+/* Текст посилань ReadMore */
+.linkRM{
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 19px;
+    color: var(--primary-color); 
+}
+/* Текст кнопок */
+.buttonText{
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 19px;
+    text-transform: uppercase;
+    text-align: center;
+    color: var(--white-text-color); 
 
-h1{
-    font-family: 400;
+}
+/* Стилізація кнопки */
+.redButton{ 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    border-radius: 32px;
+    padding: 0px 20px 0px 22px; 
+    background: linear-gradient(180deg, #EB3F57 0%, #893944 100%);
+    box-shadow: 5px 5px 10px rgba(170, 170, 204, 0.25), 10px 10px 20px rgba(170, 170, 204, 0.5); 
+    height: 40px;  
+    width: 135px;
+}
+/* Ефект hover */
+.redButton:hover{
+    background: var(--primary-color);
+    box-shadow: inset 1px 1px 2px rgba(170, 170, 204, 0.5), inset -1px -1px 2px #FFFFFF;
+    border-radius: 40px;
+}
+
+.menuItem :hover{
     color: var(--primary-color);
 }
 
-h2{
-    font-weight: 700;
+
+
+
+
+
+/* +++++++++++++++++++++++++++++++++++++++++++++++++++ */
+
+.navigationMenu{
+    display: flex;
+    height: 62px;
 }
 
-.text{
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 24px;
-    color: var( --text-color);
+.mainLogo img{
+    height: 37px;
+    width: 276px;
+    margin: 14px 0 0 14px;
 }
+
+.mainLogo{
+    width: 30%;
+}
+
+.menu{
+    display: flex;
+    list-style: none;
+    align-items: center;
+    width: 70%;
+    margin: 8px 0px 0 492px;
+}
+
+.menuItem{
+    display: flex;
+    margin: 0 72px 0 0;    
+}
+
+.pageHello h1{
+    margin: 330px 0 0 424px;
+}
+
+.pageHello p{
+    width: 954px;
+    margin: 8px 0 0 284px;
+}
+
+.pageHello .redButton{
+   display: inline-flex;
+
+   margin: 45px 0 0 694px;
+}
+
+.pageHello img{
+    display: block;
+    margin: 180px 0 0 750px;
+}
+
+.pageHello{
+    margin-bottom: 200px;
+}
+
+.page2{
+    display: flex;
+    margin-bottom: 190px;
+}
+
+.page2Left{
+    width: 45%;
+    display: inline-block;
+}
+
+.sideTitle .secondaryTitle{
+    margin-bottom: 5px;
+}
+
+.page2Left .sideTitle{
+    display: block;
+    width: 150px;
+    margin: 8px 0 0 16px;
+}
+
+.page2Left h2{
+    margin: 32px 0 0 16px;
+}
+
+.page2Left p{
+    width: 90%;
+    margin: 11px 0 0 17px;
+}
+
+.page2Left .redButton{
+    margin: 27px 0 0 14px;
+   
+}
+
+.page2Right{
+    width: 55%;
+}
+.page2Right img{
+   margin: 65px 75px;
+}
+
+.page3{
+    display: flex;
+}
+
+.page3Left{
+    display: flex;
+    width: 55%;
+}
+
+.page3Left img{
+    margin: 57px -196px; 
+}
+
+.page3Right{
+    width: 45%;
+}
+
+.page3Right .sideTitle{
+    width: 40%;
+    text-align: right;
+    margin: -2px 0 0 403px;
+  
+}
+
+.page3Right .arrowTarget{
+    display: flex;
+}
+
+.page3Right .arrowTarget img{
+    margin: 0 0 0 84px;
+    display: block;
+  
+}
+
+.page3Right .arrowTarget div{
+    margin: 22px 0px -24px 48px;
+    width: 60%;
+    
+}
+
+.page3Right .arrowTarget .secondaryText{
+    margin: 0 0 0 0;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
