--- a/variables.css
+++ b/variables.css
@@ -29,7 +29,7 @@
     background-repeat: no-repeat;
     background-size: auto;
     background-color: #F5F5FA;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     
    
     
