finish home page(need some fixs)

--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,5 @@
 @import url(/css/variables.css);
-/* 
-body{
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 27px;
-    color: var( --text-color);
-} */
+
 /* Заголовки червоним кольором */
 .mainTitle     {
     font-family: 'Open-sans';
@@ -62,6 +54,15 @@ body{
     text-align: center;
     color: var( --white-text-color);   
 }
+/* Текст форми внизу */
+.formText{
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 18px;
+    color: var( --white-text-color); 
+}
 /* Другорядний текст */
 .secondaryText{
     font-family: 'Open-sans';
@@ -89,8 +90,17 @@ body{
     line-height: 19px;
     color: var(--primary-color); 
 }
-/* Текст кнопок */
-.buttonText{
+
+/* Стилізація кнопки */
+.redButton{ 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    border-radius: 32px;
+    background: linear-gradient(180deg, #EB3F57 0%, #893944 100%);
+    box-shadow: 5px 5px 10px rgba(170, 170, 204, 0.25), 10px 10px 20px rgba(170, 170, 204, 0.5); 
+    height: 40px;  
+    width: 135px;
     font-family: 'Open-sans';
     font-style: normal;
     font-weight: 700;
@@ -99,31 +109,65 @@ body{
     text-transform: uppercase;
     text-align: center;
     color: var(--white-text-color); 
-
-}
-/* Стилізація кнопки */
-.redButton{ 
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
-    border-radius: 32px;
-    padding: 0px 20px 0px 22px; 
-    background: linear-gradient(180deg, #EB3F57 0%, #893944 100%);
-    box-shadow: 5px 5px 10px rgba(170, 170, 204, 0.25), 10px 10px 20px rgba(170, 170, 204, 0.5); 
-    height: 40px;  
-    width: 135px;
 }
 /* Ефект hover до кнопок */
 .redButton:hover{
     background: var(--primary-color);
     box-shadow: inset 1px 1px 2px rgba(170, 170, 204, 0.5), inset -1px -1px 2px #FFFFFF;
     border-radius: 40px;
+    cursor: pointer;
+    
 }
 /* Ефект hover до меню */
 .menuItem :hover{
     color: var(--primary-color);
 }
-
+/* стиль тексту(label) в формі */
+.labelText{
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 1px;
+    color: #252F40;
+}
+/* Заголовок правої частини форми */
+.titleFormWhite{
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 0px;
+    letter-spacing: -0.02666em;
+    color: var(--white-text-color);
+}
+/* нижче заголовку форми */
+.titleLowWhite{
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: var(--white-text-color);
+}
+/* шрифт цифр */
+.numbersWhite{
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 7px;
+    color: rgba(255, 255, 255, 0.8);
+}
+/* останні два повідомлення */
+.lastFontForm{
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: rgba(255, 255, 255, 0.8);
+}
 
 
 
@@ -152,13 +196,14 @@ body{
     list-style: none;
     align-items: center;
     width: 70%;
-    margin: 8px 0px 0 492px;
+    margin: 8px 0px 0 493px;
 }
 
 .menuItem{
     display: flex;
-    margin: 0 72px 0 0;    
+    margin: 0 72px 0 0;   
 }
+
 
 .pageHello h1{
     margin: 330px 0 0 424px;
@@ -398,12 +443,212 @@ body{
     margin: 19px 0 0 135px;
 }
 
+/* Стилі і розміщення форми, винесу це окремо!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
 
+/* Задав фон і розмір форми */
+.formStyle{
+    background: #FFFFFF;
+    z-index: 1;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(15px);
+    border-radius: 16px;
+    background-image: url(/img/Background\ 2.svg);
+    background-size: auto;
+    background-repeat: no-repeat;
+    height: 669px;
+    width: 84%;
+    background-position: right;
+    margin: 247px 0 133px 126px;
+    display: flex;
+   
+}
 
+.formStyle{
+    
+}
 
+.page5Left{
+    width: 65%;
+}
 
+.page5Left .mainTitle{
+    display: inline-block;
+    margin: 61px 0 0 38px;
+}
 
+.page5Left .textForm{
+    margin: 9px 0 68px 39px;
+}
+
+#name{
+    background: #F5F5FA;
+    box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5), inset 2px 2px 4px rgba(170, 170, 204, 0.25), inset 5px 5px 10px rgba(170, 170, 204, 0.5), inset -5px -5px 10px #FFFFFF;
+    border-radius: 15px;
+    width: 656px;
+    height: 40px;
+    margin: 1px 38px 19px 41px;
+    border: none;
+
+}
+
+#name::placeholder{
+    text-indent: 29px;
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 40px;
+}
+
+#email{
+    background: #F5F5FA;
+    box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5), inset 2px 2px 4px rgba(170, 170, 204, 0.25), inset 5px 5px 10px rgba(170, 170, 204, 0.5), inset -5px -5px 10px #FFFFFF;
+    border-radius: 15px;
+    width: 656px;
+    height: 40px;
+    margin: 6px 38px 14px 41px;
+    border: none;
+}
+
+#email::placeholder{
+    text-indent: 29px;
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 40px;
+}
+
+#message{
+    background: #F5F5FA;
+    box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5), inset 2px 2px 4px rgba(170, 170, 204, 0.25), inset 5px 5px 10px rgba(170, 170, 204, 0.5), inset -5px -5px 10px #FFFFFF;
+    border-radius: 15px;
+    overflow: auto;
+    resize: none;
+    width: 656px;
+    height: 141px;
+    margin: 10px 38px 19px 41px;
+    border: none;
+}
+
+#message::placeholder{
+    text-indent: 29px;
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 40px;
+}
+
+form .labelText{
+    margin: 0 0 0 45px;
+    display: inline-block;
+}
+
+form .redButton{
+    margin: 0 0 0 562px;
+    border: none;
+}
+
+.page5Right{
+    margin: 0 0 0 131px;
+    width: 35%;
+}
+
+.page5Right .titleFormWhite{
+    margin: 192px 0 30px 0px;
+}
+.page5Right .titleLowWhite{
+    width: 85%;
+}
+.phoneNumber{
+    display: flex;
+    margin: 35px 0 0 8px;
+}
+
+.phoneNumber .numbersWhite{
+    margin: 4px 0 0 15px;
+}
+
+.emailCompany{
+    display: flex;
+    margin: 26px 0 0 7px;
+}
+
+.emailCompany .lastFontForm{
+    margin: 4px 0 19px 16px;
+}
+
+.emailCompany img{
+    height: 14px;
+    width: 14px;
+}
+.placeCompany{
+    display: flex;
+}
+
+.placeCompany img{
+    margin: 2px 0 0 8px;
+}
+
+.placeCompany .lastFontForm{
+    margin: 0 0 0 14px;
+}
+
+.socialIcons{
+    margin: 54px 0 0 16px;
+}
+
+.socialIcons img{
+    margin: 0px 32px 0 0px;
+}
+
+footer .navigationMenu{
+    display: flex;
+    height: 62px;
+}
+
+footer .mainLogo img{
+    height: 37px;
+    width: 276px;
+    margin: 14px 0 0 14px;
+    mix-blend-mode: multiply;
+}
+
+footer .mainLogo{
+    width: 10%;
+}
+
+footer .menu{
+    display: flex;
+    list-style: none;
+    align-items: center;
+    width: 70%;
+    margin: 5px 4px 0 462px;
+    justify-content: flex-end;
+}
+
+footer .menuItem{
+ 
+    margin: 0 0 0 73px;   
+}
+
+footer p{
+    font-family: 'Open-sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px; 
+    margin: 0 5px 0 0;
+    
+}
+
+footer div{
+    display: flex;
+    margin: 7px 0 0 15px;
+    justify-content: space-between;
+}
 
 
 
