--- a/variables.css
+++ b/variables.css
@@ -40,6 +40,7 @@
     --secondary-color: #454654;
     --white-text-color: #FFFFFF;
     --text-color: #000000;
+    --form-text:#67748E;
  }
 
  .layout{
