fixed bu Serhii

--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@
     
 }
 /* Ефект hover до меню */
-.menuItem :hover{
+.menuItem a:hover{
     color: var(--primary-color);
 }
 /* стиль тексту(label) в формі */
@@ -177,6 +177,7 @@
 
 .navigationMenu{
     display: flex;
+    justify-content: space-between;
     height: 62px;
 }
 
@@ -196,7 +197,7 @@
     list-style: none;
     align-items: center;
     width: 70%;
-    margin: 8px 0px 0 493px;
+    /* margin: 8px 0px 0 493px; */
 }
 
 .menuItem{
@@ -206,11 +207,13 @@
 
 
 .pageHello h1{
-    margin: 330px 0 0 424px;
+    /* // Serhii */
+    /* // delete margin */
+    margin: 330px 0 0 424px; 
 }
 
 .pageHello p{
-    width: 954px;
+    width: 954px; 
     margin: 8px 0 0 284px;
 }
 
