--- a/variables.css
+++ b/variables.css
@@ -1,13 +1,13 @@
 
   @font-face {
-    font-family: Open-sans;
+    font-family: 'Open-sans';
     font-style: normal;
     font-weight: 400;
     src: url(/fonts/OpenSans-Regular.ttf);
   }
 
   @font-face {
-    font-family: Open-sans;
+    font-family: 'Open-sans';
     font-style: Bold;
     font-weight: 700;
     src: url(/fonts/OpenSans-Bold.ttf);
@@ -15,21 +15,21 @@
 
   
   body{
-    font-family: Open-sans;
+    font-family: 'Open-sans';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 27px;
     color: var(--text-color);
+    margin: 0 auto;
+/* 
+    max-width: 1919px; */
 
-
-    max-width: 1919px;
-    background: url(/img/background.svg);
     background-position: 0 62px;
-    background-repeat: no-repeat;
-    background-size: auto;
+   
+   
     background-color: #F5F5FA;
-    /* margin: 0 auto; */
+   
     
    
     
@@ -46,7 +46,7 @@
  .layout{
   max-width: 1515px;
   margin: 0 auto;
-  /* border: 1px solid black; */
+ 
  }
  
 
