--- a/css/main_home.css
+++ b/css/main_home.css
@@ -297,7 +297,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(15px);
     border-radius: 16px;
-    background-image: url(/img/Background\ 2.svg);
+    background-image: url(/img/Background2.svg);
     background-size: auto;
     background-repeat: no-repeat;
     height: 669px;
@@ -431,6 +431,8 @@ form .redButton{
 
 .placeCompany img{
     margin: 2px 0 0 8px;
+    width: 14px;
+    height: 14px;
 }
 
 .placeCompany .lastFontForm{
